--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -4,10 +4,14 @@
         <li>Total recorded incidents: {{totalincidents}}</li>
         <li>Number of attacks on corporate industry: {{corporateattacks}} ({{corporateattackspercent}}% of total recorded incidents)</li>
         <li>Number of attacks on military forces: {{militaryattacks}} ({{militaryattackspercent}}% of total recorded incidents)</li>
+        
+        <li>Annual chart (Total incidents recorded each year)</li>
         {% load static %}
-        <li>Annual chart (Total incidents recorded each year)<img src="{% static 'images/incidents_per_year.png' %}" alt="Annual incidents"></li>
+        <img src="{% static 'images/incidents_per_year.png' %}" alt="Annual incidents">
+        
+        <li>Monthly chart (total incidents recorded each month grouped by receiver continent)</li>
         {% load static %}
-        <li>Monthly chart (total incidents recorded each month grouped by receiver continent)<img src="{% static 'images/continent_incidents_per_month.png' %}" alt="Monthly continent victims"></li>
-        <p>Disclaimer: Data recorded by European Repository of Cyber Incidents (EuRepoC)</p>
+        <img src="{% static 'images/continent_incidents_per_month.png' %}" alt="Monthly continent victims">
     </ul>
+    <p>Disclaimer: Data recorded by European Repository of Cyber Incidents (EuRepoC)</p>
 </section>
