moved svgs out of li and spelling corrections

--- a/templates/continent.html
+++ b/templates/continent.html
@@ -1,5 +1,6 @@
 <!-- map info pop up-->
 <section class="mappopup">
+    <!-- <a href="{{ index }}"><button>Go back to home page</button></a> -->
     <h1>Continent: {{ continent }}</h1>
     <div id="popupContent"> 
         <!-- when single continent clicked load analysis of continent data-->
@@ -7,11 +8,14 @@
             <li>Total recorded incidents: {{ continenttotal }} ({{ continenttotalpercent }}% of the total global incidents)</li>
             <li>Number of attacks on corporate industry: {{ continentcorporate }} ({{ continentcorporatepercent }}% of attacks in the continent)</li>
             <li>Number of attacks on military forces: {{ continentmilitary }} ({{ continentmilitarypercent }}% of attacks in the continent)</li>
-            <li>Total incidents chart (Organised by incident type): {{ continentattacktypesvg }}</li>
-            <li>Attacker location chart: {{ continentattackerlocationsvg }}</li>
-            <li>Attack entry chart (most organisations unlikely to share vulnerability hence the low count): {{continentmitreaccesssvg}} </li>
-            <li>Total calcliated intensity: {{ continenttotalintensity }}</li>
-            <li>What was actually impacted in the attack according to the MITRE ATT&CK framework: {{ continentmitreimpactsvg }}</li>
+            <li>Total incidents chart (Organised by incident type): </li>
+            {{ continentattacktypesvg }}
+            <li>Attacker location chart: </li>
+            {{ continentattackerlocationsvg }}
+            <li>Attack entry chart (most organisations unlikely to share vulnerability hence the low count): </li>
+            {{continentmitreaccesssvg}}
+            <li>Total calculated intensity: {{ continenttotalintensity }}</li>
+            <li>What was actually impacted in the attack according to the MITRE ATT&CK framework: </li>
+            {{ continentmitreimpactsvg }}
         </ul>
 </section>
-<a href=""><button>Go back to home page</button></a>
